--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "emoji-mart": "^2.11.1",
     "firebase": "^6.2.4",
     "react": "^16.8.6",
+    "react-div-100vh": "^0.3.4",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
